--- a/MnA PT-BR/assets/mna/lang/pt_br.json
+++ b/MnA PT-BR/assets/mna/lang/pt_br.json
@@ -774,103 +774,103 @@
 	"block.mna.refraction_lens_wind": "Lentes de Refração: Ar",
 	"block.mna.refraction_lens_earth": "Lentes de Refração: Terra",
 	"block.mna.refraction_lens_water": "Lentes de Refração: Água",
-	"block.mna.refraction_lens_fire": "Lentes de Refração: Fogo", //PAREI AQUI
+	"block.mna.refraction_lens_fire": "Lentes de Refração: Fogo",
 	
-	"block.mna.manaweaving_altar": "Manaweaving Altar",
-	"block.mna.manaweaving_altar.repeat": "Right click with an empty hand to instantly re-craft:",
-	"block.mna.manaweaving_altar.repeat_mana_cost": "Costs %d mana",	
-	"block.mna.manaweave_projector": "Manaweave Projector",
-	"block.mna.mana_resevoir": "Mana Reservoir",
-	"block.mna.manaweave_cache": "Manaweave Cache",
+	"block.mna.manaweaving_altar": "Altar do Manatecer",
+	"block.mna.manaweaving_altar.repeat": "Clique Direito com uma mão vazia para re-craftar instantaneamente:",
+	"block.mna.manaweaving_altar.repeat_mana_cost": "Custa %d de mana",	
+	"block.mna.manaweave_projector": "Projetor de Manatecer",
+	"block.mna.mana_resevoir": "Reservatório de Mana",
+	"block.mna.manaweave_cache": "Cofre de Manatecer",
 	
 	"block.mna.pedestal": "Pedestal",
-	"block.mna.pedestal_with_sign": "Exhibition Pedestal",
-	"block.mna.particle_emitter": "Particle Emitter",
-	"block.mna.particle_emitter.data_copied": "Particle settings copied!",
-	"block.mna.particle_emitter.data_restored": "Particle settings restored!",
+	"block.mna.pedestal_with_sign": "Pedestal de Exibição",
+	"block.mna.particle_emitter": "Emissor de Partículas",
+	"block.mna.particle_emitter.data_copied": "Configurações de partículas copiado!",
+	"block.mna.particle_emitter.data_restored": "Configurações de partículas restaurado!",
 	
-	"block.mna.redstone_trigger": "Redstone Spell Trigger",
-	"block.mna.ritual_teleport_location": "Ritual Teleport Destination",
-	"block.mna.runic_anvil": "Runic Anvil",
-	"block.mna.runic_anvil.low_tier": "You feel like this might work, but you don't have the skill or knowledge to complete it at this time.",
-	"block.mna.runeforge": "Runeforge",
-	"block.mna.runic_light": "Runic Light",
-	"block.mna.runic_torch": "Runic Torch",
+	"block.mna.redstone_trigger": "Gatilho Redstone de Feitiço",
+	"block.mna.ritual_teleport_location": "Destino do Ritual de Teleporte",
+	"block.mna.runic_anvil": "Bigorna Rúnica",
+	"block.mna.runic_anvil.low_tier": "Você sente que isso talvez funcione, mas você não tem a abilidade ou o conhecimento para completar no momento.",
+	"block.mna.runeforge": "Forja Rúnica",
+	"block.mna.runic_light": "Lamparina Rúnica",
+	"block.mna.runic_torch": "Tocha Rúnica",
 	
-	"block.mna.slipstream_generator": "Slipstream Generator",
+	"block.mna.slipstream_generator": "Túnel de Turbilhão",
 	
 	"block.mna.occulus": "Occulus",
-	"block.mna.occulus.confusion": "You gaze into the floating crystal and feel your consciousness being drawn into it.  You quickly close your eyes and turn away.  You will need to learn more about this strange device before you can use it.",
+	"block.mna.occulus.confusion": "Você contempla o cristal flutuante e sente sua consciência sendo atraída para dentro dele.  Você rapidamente fecha os olhos e vira para o outro lado.  Você precisará aprender mais sobre esse estranho dispositivo antes de poder usá-lo.",
 	
-	"block.mna.warding_candle": "Warding Candle",
-	"block.mna.transitory_tunnel": "Transitory Tunnel",
-	"block.mna.chalk_rune": "Ritual Rune",  
-	"block.mna.transitory_tile": "Transitory Tile",
+	"block.mna.warding_candle": "Vela Protetora",
+	"block.mna.transitory_tunnel": "Túnel Transitório",
+	"block.mna.chalk_rune": "Runa Ritualística",  
+	"block.mna.transitory_tile": "Ladrilho Transitório",
 	
-	"block.mna.thesis_desk": "Thesis Desk",
-	"block.mna.affinity_tinker": "Affinity Tinker Table",
-	"block.mna.eldrin_fume": "Eldrin Fume Filter",
-	"block.mna.fume_bellows": "Fume Bellows",
-	"block.mna.fume_prism": "Fume Prism",	
-	"block.mna.spell_specialization": "Master's Dais",
-	"block.mna.disenchanter": "Disenchanter",
-	"block.mna.study_desk": "Study Desk",
-	"block.mna.spell_infusion": "Transcription Table",
-	"block.mna.book_stand": "Lectern",
+	"block.mna.thesis_desk": "Mesa de Tese",
+	"block.mna.affinity_tinker": "Mesa de Mexer Afinidade",
+	"block.mna.eldrin_fume": "Filtro de Vapores Eldrin",
+	"block.mna.fume_bellows": "Fole de Vapores",
+	"block.mna.fume_prism": "Prisma de Fole",	
+	"block.mna.spell_specialization": "Palanque do Mestre",
+	"block.mna.disenchanter": "Desencantador",
+	"block.mna.study_desk": "Mesa de Estudos",
+	"block.mna.spell_infusion": "Mesa de Transcrição",
+	"block.mna.book_stand": "Atril",
 	
-	"block.mna.decoration.runic_glass": "Runic Glass",
-	"block.mna.decoration.runic_glass_black": "Black Stained Runic Glass",
-	"block.mna.decoration.runic_glass_blue": "Blue Stained Runic Glass",
-	"block.mna.decoration.runic_glass_brown": "Brown Stained Runic Glass",
-	"block.mna.decoration.runic_glass_cyan": "Cyan Stained Runic Glass",
-	"block.mna.decoration.runic_glass_gray": "Gray Stained Runic Glass",
-	"block.mna.decoration.runic_glass_green": "Green Stained Runic Glass",
-	"block.mna.decoration.runic_glass_light_blue": "Light Blue Stained Runic Glass",
-	"block.mna.decoration.runic_glass_light_gray": "Light Gray Stained Runic Glass",
-	"block.mna.decoration.runic_glass_lime": "Lime Stained Runic Glass",
-	"block.mna.decoration.runic_glass_magenta": "Magenta Stained Runic Glass",
-	"block.mna.decoration.runic_glass_orange": "Orange Stained Runic Glass",
-	"block.mna.decoration.runic_glass_pink": "Pink Stained Runic Glass",
-	"block.mna.decoration.runic_glass_purple": "Purple Stained Runic Glass",
-	"block.mna.decoration.runic_glass_red": "Red Stained Runic Glass",
-	"block.mna.decoration.runic_glass_white": "White Stained Runic Glass",
-	"block.mna.decoration.runic_glass_yellow": "Yellow Stained Runic Glass",
+	"block.mna.decoration.runic_glass": "Vidro Rúnico",
+	"block.mna.decoration.runic_glass_black": "Vidro Tingido Rúnico Preto",
+	"block.mna.decoration.runic_glass_blue": "Vidro Tingido Rúnico Azul",
+	"block.mna.decoration.runic_glass_brown": "Vidro Tingido Rúnico Marrom",
+	"block.mna.decoration.runic_glass_cyan": "Vidro Tingido Rúnico Ciano",
+	"block.mna.decoration.runic_glass_gray": "Vidro Tingido Rúnico Cinza",
+	"block.mna.decoration.runic_glass_green": "Vidro Tingido Rúnico Verde",
+	"block.mna.decoration.runic_glass_light_blue": "Vidro Tingido Rúnico Azul Claro",
+	"block.mna.decoration.runic_glass_light_gray": "Vidro Tingido Rúnico Cinza Claro",
+	"block.mna.decoration.runic_glass_lime": "Vidro Tingido Rúnico Verde-Limão",
+	"block.mna.decoration.runic_glass_magenta": "Vidro Tingido Rúnico Magenta",
+	"block.mna.decoration.runic_glass_orange": "Vidro Tingido Rúnico Laranja",
+	"block.mna.decoration.runic_glass_pink": "Vidro Tingido Rúnico Rosa",
+	"block.mna.decoration.runic_glass_purple": "Vidro Tingido Rúnico Roxo",
+	"block.mna.decoration.runic_glass_red": "Vidro Tingido Rúnico Vermelho",
+	"block.mna.decoration.runic_glass_white": "Vidro Tingido Rúnico Branco",
+	"block.mna.decoration.runic_glass_yellow": "Vidro Tingido Rúnico Amarelo",
 	
-	"block.mna.decoration.runic_glass_pane": "Runic Glass Pane",
-	"block.mna.decoration.runic_glass_pane_black": "Black Stained Runic Glass Pane",
-	"block.mna.decoration.runic_glass_pane_blue": "Blue Stained Runic Glass Pane",
-	"block.mna.decoration.runic_glass_pane_brown": "Brown Stained Runic Glass Pane",
-	"block.mna.decoration.runic_glass_pane_cyan": "Cyan Stained Runic Glass Pane",
-	"block.mna.decoration.runic_glass_pane_gray": "Gray Stained Runic Glass Pane",
-	"block.mna.decoration.runic_glass_pane_green": "Green Stained Runic Glass Pane",
-	"block.mna.decoration.runic_glass_pane_light_blue": "Light Blue Stained Runic Glass Pane",
-	"block.mna.decoration.runic_glass_pane_light_gray": "Light Gray Stained Runic Glass Pane",
-	"block.mna.decoration.runic_glass_pane_lime": "Lime Stained Runic Glass Pane",
-	"block.mna.decoration.runic_glass_pane_magenta": "Magenta Stained Runic Glass Pane",
-	"block.mna.decoration.runic_glass_pane_orange": "Orange Stained Runic Glass Pane",
-	"block.mna.decoration.runic_glass_pane_pink": "Pink Stained Runic Glass Pane",
-	"block.mna.decoration.runic_glass_pane_purple": "Purple Stained Runic Glass Pane",
-	"block.mna.decoration.runic_glass_pane_red": "Red Stained Runic Glass Pane",
-	"block.mna.decoration.runic_glass_pane_white": "White Stained Runic Glass Pane",
-	"block.mna.decoration.runic_glass_pane_yellow": "Yellow Stained Runic Glass Pane",
+	"block.mna.decoration.runic_glass_pane": "Vidraça Rúnica",
+	"block.mna.decoration.runic_glass_pane_black": "Vidraça Rúnica Preta",
+	"block.mna.decoration.runic_glass_pane_blue": "Vidraça Rúnica Azul",
+	"block.mna.decoration.runic_glass_pane_brown": "Vidraça Rúnica Marrom",
+	"block.mna.decoration.runic_glass_pane_cyan": "Vidraça Rúnica Ciana",
+	"block.mna.decoration.runic_glass_pane_gray": "Vidraça Rúnica Cinza",
+	"block.mna.decoration.runic_glass_pane_green": "Vidraça Rúnica Verde",
+	"block.mna.decoration.runic_glass_pane_light_blue": "Vidraça Rúnica Azul Clara",
+	"block.mna.decoration.runic_glass_pane_light_gray": "Vidraça Rúnica Cinza Clara",
+	"block.mna.decoration.runic_glass_pane_lime": "Vidraça Rúnica Verde-Limão",
+	"block.mna.decoration.runic_glass_pane_magenta": "Vidraça Rúnica Magenta",
+	"block.mna.decoration.runic_glass_pane_orange": "Vidraça Rúnica Laranja",
+	"block.mna.decoration.runic_glass_pane_pink": "Vidraça Rúnica Rosa",
+	"block.mna.decoration.runic_glass_pane_purple": "Vidraça Rúnica Roxa",
+	"block.mna.decoration.runic_glass_pane_red": "Vidraça Rúnica Vermelha",
+	"block.mna.decoration.runic_glass_pane_white": "Vidraça Rúnica Branca",
+	"block.mna.decoration.runic_glass_pane_yellow": "Vidraça Rúnica Amarela",
 	
-	"block.mna.decoration.arcane_stone": "Arcane Stone",
-	"block.mna.decoration.arcane_stone_stairs": "Arcane Stone Stairs",
-	"block.mna.decoration.arcane_stone_slab": "Arcane Stone Slab",
-	"block.mna.decoration.arcane_stone_wall": "Arcane Stone Wall",
-	"block.mna.decoration.arcane_stone_pillar": "Arcane Stone Pillar",
+	"block.mna.decoration.arcane_stone": "Pedra Arcana",
+	"block.mna.decoration.arcane_stone_stairs": "Escadas de Pedra Arcana",
+	"block.mna.decoration.arcane_stone_slab": "Laje de Pedra Arcana",
+	"block.mna.decoration.arcane_stone_wall": "Parede de Pedra Arcana",
+	"block.mna.decoration.arcane_stone_pillar": "Pilar de Pedra Arcana",
 	
-	"block.mna.decoration.vinteum_arcane_stone": "Vinteum Stone",
-	"block.mna.decoration.vinteum_arcane_stone_chiseled": "Chiseled Vinteum Stone",
-	"block.mna.decoration.vinteum_arcane_stone_stairs": "Vinteum Stone Stairs",
-	"block.mna.decoration.vinteum_arcane_stone_stairs_line": "Vinteum Stone Stairs Line",
-	"block.mna.decoration.vinteum_arcane_stone_slab": "Vinteum Stone Slab",
-	"block.mna.decoration.vinteum_arcane_stone_wall": "Vinteum Stone Wall",
-	"block.mna.decoration.vinteum_arcane_stone_pillar": "Vinteum Stone Pillar",
-	"block.mna.decoration.vinteum_arcane_stone_straight": "Vinteum Stone Line",
-	"block.mna.decoration.vinteum_arcane_stone_t": "Vinteum Stone T",
-	"block.mna.decoration.vinteum_arcane_stone_quad": "Vinteum Stone Quad",
-	"block.mna.decoration.vinteum_arcane_stone_corner": "Vinteum Stone Corner",
+	"block.mna.decoration.vinteum_arcane_stone": "Pedra de Vinteum",
+	"block.mna.decoration.vinteum_arcane_stone_chiseled": "Pedra Talhada de Vinteum",
+	"block.mna.decoration.vinteum_arcane_stone_stairs": "Escadas de Pedra de Vinteum",
+	"block.mna.decoration.vinteum_arcane_stone_stairs_line": "Linha de Escadas de Pedra de Vinteum",
+	"block.mna.decoration.vinteum_arcane_stone_slab": "Laje de Pedra de Vinteum",
+	"block.mna.decoration.vinteum_arcane_stone_wall": "Parede de Pedra de Vinteum",
+	"block.mna.decoration.vinteum_arcane_stone_pillar": "Pilar de Pedra de Vinteum",
+	"block.mna.decoration.vinteum_arcane_stone_straight": "Linha de Pedra de Vinteum",
+	"block.mna.decoration.vinteum_arcane_stone_t": "T de Pedra de Vinteum",
+	"block.mna.decoration.vinteum_arcane_stone_quad": "Cruz de Pedra de Vinteum",
+	"block.mna.decoration.vinteum_arcane_stone_corner": "Curva de Pedra de Vinteum", //PAREI AQUI
 	
 	"block.mna.decoration.redstone_arcane_stone": "Redstone-Infused Stone",
 	"block.mna.decoration.redstone_arcane_stone_chiseled": "Chiseled Redstone-Infused Stone",
