--- a/MnA PT-BR/assets/mna/lang/pt_br.json
+++ b/MnA PT-BR/assets/mna/lang/pt_br.json
@@ -1080,56 +1080,56 @@
 	"block.mna.decoration.emerald_arcane_sandstone_straight": "Arenito Arcano Infundido com Esmeralda (Reta)",
 	"block.mna.decoration.emerald_arcane_sandstone_t": "Arenito Arcano Infundido com Esmeralda (T)",
 	"block.mna.decoration.emerald_arcane_sandstone_quad": "Arenito Arcano Infundido com Esmeralda (Cruz)",
-	"block.mna.decoration.emerald_arcane_sandstone_corner": "Arenito Arcano Infundido com Esmeralda (Canto)", //PAREI AQUI
+	"block.mna.decoration.emerald_arcane_sandstone_corner": "Arenito Arcano Infundido com Esmeralda (Canto)",
 	
-	"enchantment.mna.aura-healing": "Aura of Regenerating",
-	"enchantment.mna.aura-healing.desc": "Applies a regeneration buff to the player and all nearby players if their health is below 75%.  Carries a high mana cost.",
-	"enchantment.mna.aura-bulwark": "Aura of The Bulwark",
-	"enchantment.mna.aura-bulwark.desc": "Increases the armor of all nearby players.  Carries a small continual mana cost.", 
-	"enchantment.mna.aura-running": "Longstrider Aura",
-	"enchantment.mna.aura-running.desc": "Allows the player and all nearby players to run at a faster rate for a small continual mana cost.",
-	"enchantment.mna.aura-jumping": "Aura of Leaps and Bounds",
-	"enchantment.mna.aura-jumping.desc": "Allows the player and all nearby players to jump higher for a small continual mana cost.",
-	"enchantment.mna.aura-depths": "Aura of the Deep",
-	"enchantment.mna.aura-depths.desc": "Applies Conduit Power to the player and all nearby players for a small mana cost.",
-	"enchantment.mna.aura-mining": "Miner's Aura",
-	"enchantment.mna.aura-mining.desc": "Allows the player and all nearby players to mine faster with a pickaxe.",
-	"enchantment.mna.aura-repair": "Artificer's Aura",
-	"enchantment.mna.aura-repair.desc": "Repairs all gear in the player's inventory as well as the inventories of all nearby players for a moderate mana cost.",
-	"enchantment.mna.aura-pilgrim": "Pilgrim's Aura",
-	"enchantment.mna.aura-pilgrim.desc": "A replacement for the beloved pilgrim staff, this applies the same effect to the player as well as all nearby players for a small mana cost.", 
-	"enchantment.mna.gilded": "Gilded",
-	"enchantment.mna.gilded.desc": "This enchantment simulates golden armor in the nether, making Piglins neutral.",
-	"enchantment.mna.xp_to_souls": "Experienced Soul",
-	"enchantment.mna.xp_to_souls.desc": "Causes some of the XP you collect to be converted into souls.",
-	"enchantment.mna.soulbound": "Soulbound",
-	"enchantment.mna.soulbound.desc": "Causes the enchanted item to respawn with you after a death.",
-	"enchantment.mna.fireproof": "Fireproof",
-	"enchantment.mna.fireproof.desc": "This enchantment makes the item it's placed on immune to being destroyed if dropped in fire or lava.",		
-	"enchantment.mna.bouncing": "Bouncy",
-	"enchantment.mna.bouncing.desc": "This enchantment makes the wearer immune to fall damage, instead causing them to bounce off the ground.  Boing!",
-	"enchantment.mna.mana-repair": "Mana Repair",
-	"enchantment.mna.mana-repair.desc": "This enchantment takes a small amount of mana per second to repair the item that's enchanted, as long as its in your inventory.",
-	"enchantment.mna.beheading": "Beheading",
-	"enchantment.mna.beheading.desc": "This enchantment makes enemies killed more likely to drop heads (5% per level of enchant).  It will not increase the number of heads dropped, however.  Other effects from other mods still may, however.",
-	"enchantment.mna.cloudstep": "Cloudstep",
-	"enchantment.mna.cloudstep.desc": "This enchantment allows multiple jumps in midair, one per level of the enchant.",
-	"enchantment.mna.transitorystep": "Transitory Step",
-	"enchantment.mna.transitorystep.desc": "This enchantment creates transitory tiles under your feet when there would otherwise be a block there.  If you sneak, the effect will not occur.",
-	"enchantment.mna.returning": "Telekinetic Retrieval",
-	"enchantment.mna.returning.desc": "Causes items summoned by animus or shot by impulse to attempt to return to your hand instead of dropping in place when the effect ends.",
-	"enchantment.mna.bludgeoning": "Bludgeoning",
-	"enchantment.mna.bludgeoning.desc": "Causes Staves, Wands, and Bangles to deal more damage in melee.",
-	"enchantment.mna.duration_modifier": "Ascended Duration",
-	"enchantment.mna.duration_modifier.desc": "Causes the spell on the Staff, Wand, or Bangle to have its duration increased by a number of steps equal to the enchantment level.",
-	"enchantment.mna.range_modifier": "Ascended Range",
-	"enchantment.mna.range_modifier.desc": "Causes the spell on the Staff, Wand, or Bangle to have its range increased by a number of steps equal to the enchantment level.",
-	"enchantment.mna.speed_modifier": "Ascended Speed",
-	"enchantment.mna.speed_modifier.desc": "Causes the spell on the Staff, Wand, or Bangle to have its speed increased by a number of steps equal to the enchantment level.",
+	"enchantment.mna.aura-healing": "Aura da Regeneração",
+	"enchantment.mna.aura-healing.desc": "Aplica um efeito de regeneração ao usuário e jogadores próximos se a vida lhes cai abaixo de 75%. Carrega um alto custo de mana.",
+	"enchantment.mna.aura-bulwark": "Auda do Bastião",
+	"enchantment.mna.aura-bulwark.desc": "Aumenta a armadura de todos os jogadores próximos. Carrega um baixo custo contínuo de mana.", 
+	"enchantment.mna.aura-running": "Aura do Passolargo",
+	"enchantment.mna.aura-running.desc": "Permite que o usuário e todos os jogadores próximos corram mais por um pequeno custo contínuo de mana.",
+	"enchantment.mna.aura-jumping": "Aura dos Saltitos",
+	"enchantment.mna.aura-jumping.desc": "Permite que o usuário e todos os jogadores próximos pulem mais alto por um pequeno custo contínuo de mana.",
+	"enchantment.mna.aura-depths": "Aura do Profundo",
+	"enchantment.mna.aura-depths.desc": "Aplica Proteção do Mar ao usuário e todos os jogadores próximos por um pequeno custo contínuo de mana.",
+	"enchantment.mna.aura-mining": "Aura do Minerador",
+	"enchantment.mna.aura-mining.desc": "Permite que o usuário e todos os jogadores próximos minerem mais rápido com uma picareta.",
+	"enchantment.mna.aura-repair": "Aura do Artífice",
+	"enchantment.mna.aura-repair.desc": "Conserta todos os equipamento no inventário do usuário e nos dos jogadores próximos por um custo moderado de mana.",
+	"enchantment.mna.aura-pilgrim": "Aura do Peregrino",
+	"enchantment.mna.aura-pilgrim.desc": "Um substituto para o amado cajado do peregrino, esta aura aplica o mesmo efeito para o usuário e todos os jogadores próximos por um pequeno custo de mana.", 
+	"enchantment.mna.gilded": "Dourado",
+	"enchantment.mna.gilded.desc": "Este encantamento simula vestir uma armadura de ouro no nether, tornando os Piglins neutros.",
+	"enchantment.mna.xp_to_souls": "Alma Experiente",
+	"enchantment.mna.xp_to_souls.desc": "Causa com que uma parte da XP que você coleta seja convertida em almas.",
+	"enchantment.mna.soulbound": "Atrelado",
+	"enchantment.mna.soulbound.desc": "Causa com que o item encantado renasça com você após a morte.",
+	"enchantment.mna.fireproof": "À Prova de Fogo",
+	"enchantment.mna.fireproof.desc": "Este encantamento faz com que o item não seja destruído ao dropá-lo no fogo ou na lava.",		
+	"enchantment.mna.bouncing": "Pula-pula",
+	"enchantment.mna.bouncing.desc": "Este encantamento torna o usuário imune a danos de queda, fazendo com que ele saltite ao tocar o chão.  Boing!",
+	"enchantment.mna.mana-repair": "Mana Reparo",
+	"enchantment.mna.mana-repair.desc": "Este encantamento consome uma pequena quantidade de mana por segundo para consertar o item encantado, contanto que esteja no seu inventário.",
+	"enchantment.mna.beheading": "Decapitação",
+	"enchantment.mna.beheading.desc": "Este encantamento faz com que inimigos mortos dropem cabeças com mais frequência (5% pra cada nível do encantamento).  Ele não irá aumentar a quantidade de cabeças dropadas.  Outros efeitos de outros mods, porém, ainda poderão.",
+	"enchantment.mna.cloudstep": "Passo da Nuvem",
+	"enchantment.mna.cloudstep.desc": "Este encantamento permite que o usuário pule múltiplas vezes no meio do ar, um pulo para cada nível do encantamento.",
+	"enchantment.mna.transitorystep": "Passo Transitório",
+	"enchantment.mna.transitorystep.desc": "Este encantamento cria blocos transitórios sob seus pés quando não teria algum bloco ali.  Se você agachar, o efeito não ocorre.",
+	"enchantment.mna.returning": "Recuperação Telecinética",
+	"enchantment.mna.returning.desc": "Causa com que itens invocados por animus ou atirados por impulso tentem retornar para a sua mão ao invés de dropar no chão quando o efeito acaba.",
+	"enchantment.mna.bludgeoning": "Porretada",
+	"enchantment.mna.bludgeoning.desc": "Faz com que Cajados, Varinhas, e Braceletes causem mais dano quando usados como arma corpo-a-corpo.",
+	"enchantment.mna.duration_modifier": "Duração Elevada",
+	"enchantment.mna.duration_modifier.desc": "Faz com que o feitiço no Cajado, Varinha, ou Bracelete tenha sua duração aumentada por um número de vezes igual ao nível do encantamento.",
+	"enchantment.mna.range_modifier": "Alcance Elevado",
+	"enchantment.mna.range_modifier.desc": "Faz com que o feitiço no Cajado, Varinha, ou Bracelete tenha seu alcance aumentado por um número de vezes igual ao nível do encantamento.",
+	"enchantment.mna.speed_modifier": "Velocidade Elevada",
+	"enchantment.mna.speed_modifier.desc": "Faz com que o feitiço no Cajado, Varinha, ou Bracelete tenha sua velocidade aumentada por um número de vezes igual ao nível do encantamento.", //PAREI AQUI
 	
-	"cantrip.mna.tier": "Tier %d",
-	"cantrip.mna.ignite": "Ignite",
-	"cantrip.mna.ignite.desc": "After a short delay, lights a fire at a targeted point within 3 blocks of where you're looking.",
+	"cantrip.mna.tier": "Grau %d",
+	"cantrip.mna.ignite": "Ignição",
+	"cantrip.mna.ignite.desc": "Após um breve delay, acende um fogo num ponto alvo dentro de 3 blocos de onde você está olhando.",
 	"cantrip.mna.halp": "Signal Flare",
 	"cantrip.mna.halp.desc": "Launches a firework from your position and makes you glow.  At Tier 3 and up, summons a random ally on a long cooldown.  The cooldown does not affect the firework.",
 	"cantrip.mna.transmute": "Transmute",
