--- a/MnA PT-BR/assets/mna/lang/pt_br.json
+++ b/MnA PT-BR/assets/mna/lang/pt_br.json
@@ -2,7 +2,7 @@
 ///// Minhas anotações
 // Tier-->Grau | Cantrip-->Truque | Inscriptionist-->Escritor Rúnico | Manaweave-->Manatecer | Pouch-->Bolsa | Runescribing-->Inscrição de Runas |
 // Spellbreaker-->Quebramagia | Deathcap-->Fungamorte | Barkling-->Madeirinha | Lantern Wraith-->Espectro Lamparino | Hulking Zombie-->Zumbizão | Crypt Stalker-->Assassinosso | Chatterer-->Tagarelo
-// Lodestar-->Estrela Guia | Wellspring-->Manafonte |
+// Lodestar-->Estrela Guia | Wellspring-->Manafonte | Bulwark-->Bastião |
 //
 /////
 	"curios.identifier.spell": "Feitiço",
@@ -1125,113 +1125,113 @@
 	"enchantment.mna.range_modifier": "Alcance Elevado",
 	"enchantment.mna.range_modifier.desc": "Faz com que o feitiço no Cajado, Varinha, ou Bracelete tenha seu alcance aumentado por um número de vezes igual ao nível do encantamento.",
 	"enchantment.mna.speed_modifier": "Velocidade Elevada",
-	"enchantment.mna.speed_modifier.desc": "Faz com que o feitiço no Cajado, Varinha, ou Bracelete tenha sua velocidade aumentada por um número de vezes igual ao nível do encantamento.", //PAREI AQUI
+	"enchantment.mna.speed_modifier.desc": "Faz com que o feitiço no Cajado, Varinha, ou Bracelete tenha sua velocidade aumentada por um número de vezes igual ao nível do encantamento.",
 	
 	"cantrip.mna.tier": "Grau %d",
 	"cantrip.mna.ignite": "Ignição",
 	"cantrip.mna.ignite.desc": "Após um breve delay, acende um fogo num ponto alvo dentro de 3 blocos de onde você está olhando.",
-	"cantrip.mna.halp": "Signal Flare",
-	"cantrip.mna.halp.desc": "Launches a firework from your position and makes you glow.  At Tier 3 and up, summons a random ally on a long cooldown.  The cooldown does not affect the firework.",
-	"cantrip.mna.transmute": "Transmute",
-	"cantrip.mna.transmute.jei": "Transmute Cantrip",
-	"cantrip.mna.transmute.desc": "After a short delay, transmutes either a placed block of Copper into Quicksilver, Stone into Arcane Stone, Sandstone into Arcane Sandstone, and Gravel into Flint.  Affects a small radius when applied.",
-	"cantrip.mna.gust": "Gust",
-	"cantrip.mna.gust.desc": "Clears out grass, snow, saplings, web, fire, etc. in a 9x9x2 centered on you.",
-	"cantrip.mna.ascend": "Ascend",
-	"cantrip.mna.ascend.desc": "Transports you up through a ceiling that is close above you to stand atop the first valid space above.  Cannot send you above the build height.",
-	"cantrip.mna.ascend.no_ceiling": "No ceiling was found close above you to transport through.",
-	"cantrip.mna.ascend.no_valid_point": "No valid point above the ceiling was found.",
-	"cantrip.mna.dispel": "Dispel",
-	"cantrip.mna.dispel.desc": "Removes magical effects similar to milk, such as poison or levitation.  Great vs witches!",
-	"cantrip.mna.drought": "Drought",
-	"cantrip.mna.drought.desc": "Clears out water centered on you, same as a sponge.",
-	"cantrip.mna.grimoire": "Summon Grimoire",
-	"cantrip.mna.grimoire.desc": "Summons a grimoire, a book of ender storage for spells.",
-	"cantrip.mna.faction_grimoire": "Summon Faction Grimoire",	
-	"cantrip.mna.faction_grimoire.desc": "Summons a faction-specific grimoire, a book of ender storage for spells.",
-	"cantrip.mna.faction_grimoire_nofaction": "You do not have a faction, cantrip failed.",
-	"cantrip.mna.freeform_spell_a": "Freeform Spell",
-	"cantrip.mna.freeform_spell_a.desc": "Put a spell here and cast it when you perform the manaweave combo.  Modifiers will not be applied.",
-	"cantrip.mna.freeform_spell_b": "Freeform Spell",
-	"cantrip.mna.freeform_spell_b.desc": "Put a spell here and cast it when you perform the manaweave combo.  Modifiers will not be applied.",
-	"cantrip.mna.freeform_spell_c": "Freeform Spell",
-	"cantrip.mna.freeform_spell_c.desc": "Put a spell here and cast it when you perform the manaweave combo.  Modifiers will not be applied.",
-	"cantrip.mna.ward": "Ward",
-	"cantrip.mna.ward.desc": "Wards a single block against simple interactions and destruction.  Set an access key by placing it in the item slot for this cantrip.  Players holding this item may bypass the ward.  Item quantity/NBT data is ignored.",
-	"cantrip.mna.reveal_ward": "Ward: Reveal",
-	"cantrip.mna.reveal_ward.desc": "Searches in a very short distance for wards.",
-	"cantrip.mna.ward.added": "Block warded!",
-	"cantrip.mna.ward.removed": "Block ward removed!",
-	"cantrip.mna.ward.denied": "You were unable to remove the ward.",
+	"cantrip.mna.halp": "Sinalizador de Emergência",
+	"cantrip.mna.halp.desc": "Lança um fogo de artifício da sua posição e te faz brilhar.  A partir do Grau 3, invoca um aliado aleatório com um longo cooldown.  O cooldown não afeta o fogo de artifício.",
+	"cantrip.mna.transmute": "Transmutar",
+	"cantrip.mna.transmute.jei": "Truque de Transmutar",
+	"cantrip.mna.transmute.desc": "Após um breve delay, transmuta um bloco de Cobre para Mercúrio, Pedra para Pedra Arcana, Arenito para Arenito Arcano, e Cascalho para Sílex.  Afeta uma pequena área quando aplicado.",
+	"cantrip.mna.gust": "Ventania",
+	"cantrip.mna.gust.desc": "Limpa grama, neve, mudas, teias, fogo, etc. em uma área 9x9x2 em torno de você.",
+	"cantrip.mna.ascend": "Ascender",
+	"cantrip.mna.ascend.desc": "Transporta você para cima por meio do teto e lhe coloca ao topo do primeiro espaço válido acima.  Não pode lhe transportar acima do limite de altura de construção.",
+	"cantrip.mna.ascend.no_ceiling": "Nenhum teto foi encontrado perto o suficiente para você se transportar.",
+	"cantrip.mna.ascend.no_valid_point": "Nenhum ponto válido foi encontrado acima do teto.",
+	"cantrip.mna.dispel": "Dissipar",
+	"cantrip.mna.dispel.desc": "Remove efeitos mágicos do usuário como veneno ou levitação, de uma maneira parecida com tomar leite.  Ótimo contra bruxas!",
+	"cantrip.mna.drought": "Seca",
+	"cantrip.mna.drought.desc": "Limpa blocos de água ao redor de você, de uma maneira parecida com uma esponja.",
+	"cantrip.mna.grimoire": "Invocar Grimório",
+	"cantrip.mna.grimoire.desc": "Invoca um grimório, um livro de armazenamento ender para feitiços.",
+	"cantrip.mna.faction_grimoire": "Invocar Grimório da Facção",	
+	"cantrip.mna.faction_grimoire.desc": "Invoca um grimório específico da sua facção, um livro de armazenamento ender para feitiços.",
+	"cantrip.mna.faction_grimoire_nofaction": "Você não está em uma facção, o truque falhou.",
+	"cantrip.mna.freeform_spell_a": "Feitiço Livre",
+	"cantrip.mna.freeform_spell_a.desc": "Coloque um feitiço aqui e irá lançá-lo quando fizer o manatecer.  Modificadores não serão aplicados.",
+	"cantrip.mna.freeform_spell_b": "Feitiço Livre",
+	"cantrip.mna.freeform_spell_b.desc": "Coloque um feitiço aqui e irá lançá-lo quando fizer o manatecer.  Modificadores não serão aplicados.",
+	"cantrip.mna.freeform_spell_c": "Feitiço Livre",
+	"cantrip.mna.freeform_spell_c.desc": "Coloque um feitiço aqui e irá lançá-lo quando fizer o manatecer.  Modificadores não serão aplicados.",
+	"cantrip.mna.ward": "Proteção",
+	"cantrip.mna.ward.desc": "Protege um bloco contra simples interações e destruição.  Defina uma chave de acesso colocando-a no slot deste truque.  Jogadores segurando este item poderão ignorar a proteção.  A quantidade/NBT do item não importa.",
+	"cantrip.mna.reveal_ward": "Proteção: Revelar",
+	"cantrip.mna.reveal_ward.desc": "Procura por proteções em uma curta distância.",
+	"cantrip.mna.ward.added": "Bloco protegido!",
+	"cantrip.mna.ward.removed": "Proteção de bloco removida!",
+	"cantrip.mna.ward.denied": "Você não pôde remover a proteção.",
 	
-	"effect.mna.aura_of_frost": "Aura of Frost",
-	"effect.mna.camouflage": "Camouflage",
-	"effect.mna.bulwark": "Bulwark",
-	"effect.mna.icarian_flight": "Icarian Flight",
-	"effect.mna.repair": "Repair",
-	"effect.mna.eldrin_sight": "Eldrin Sight",
-	"effect.mna.wellspring_sight": "Wellspring Sight",
-	"effect.mna.entangle": "Entangled",
-	"effect.mna.gravity_well": "Gravity Well",
-	"effect.mna.chrono_anchor": "Chrono Anchor",
-	"effect.mna.chrono_exhaustion": "Chrono Exhaustion",
-	"effect.mna.watery_grave": "Watery Grave",
-	"effect.mna.silence": "Silence",
-	"effect.mna.mana_boost": "Mana Boost",
-	"effect.mna.mana_regen": "Mana Regen",
-	"effect.mna.dispel_exhaustion": "Dispel Exhaustion",
-	"effect.mna.instant_mana": "Mana Restoration",
-	"effect.mna.asphyxiate": "Asphyxiate",
-	"effect.mna.mana_stunt": "Stunted Mana",
-	"effect.mna.mana_shield": "Mana Shield",
-	"effect.mna.flame_cloak": "Flame Cloak",
-	"effect.mna.wind_wall": "Wind Wall",
-	"effect.mna.levitation": "Levitation",
-	"effect.mna.briarthorn_barrier": "Briarthorn Barrier",
-	"effect.mna.life_tap": "Life Tap",
-	"effect.mna.lift": "Lift",
-	"effect.mna.living_bomb": "Living Bomb",
-	"effect.mna.mana_burn": "Mana Burn",
-	"effect.mna.greater_invisibility": "Greater Invisibility",
-	"effect.mna.pilgrim": "Wanderlust",
-	"effect.mna.confusion": "Confusion",
-	"effect.mna.mind_control": "Mind Control",
-	"effect.mna.divination": "Divination",
-	"effect.mna.mist_form": "Mist Form",
-	"effect.mna.enlarged": "Enlarged",
-	"effect.mna.reduced": "Reduced",
-	"effect.mna.mind_vision": "Mind Vision",
-	"effect.mna.possession": "Possession",		
-	"effect.mna.death": "Reaper's Gaze",
-	"effect.mna.choosing_wellspring": "Choosing Wellspring",
-	"effect.mna.eldrin_flight": "Eldrin Flight",
-	"effect.mna.circle_of_power": "Allied Sanctum",
-	"effect.mna.cold_dark": "Death's Embrace",
-	"effect.mna.soul_vulnerability": "Vulnerable Soul",
-	"effect.mna.fossilize": "Fossilize",
-	"effect.mna.snowblind": "Snowblind",
-	"effect.mna.bind_wounds": "Bind Wounds",
-	"effect.mna.insight": "Insight",
-	"effect.mna.earthquake": "Earthquake",
-	"effect.mna.amplify_magic": "Amplify Magic",
-	"effect.mna.dampen_magic": "Dampen Magic",
-	"effect.mna.soaked": "Soaked",
-	"effect.mna.sunder": "Sunder",
-	"effect.mna.frailty": "Frailty",
-	"effect.mna.disjunction": "Disjunction",
-	"effect.mna.telekinesis": "Telekinesis",
-	"effect.mna.water_walking": "Water Walking",
-	"effect.mna.spider_climbing": "Spider Climbing",
-	"effect.mna.soar": "Soaring",
-	"effect.mna.lacerate": "Lacerate",
-	"effect.mna.writhing_brambles": "Writhing Brambles",
-	"effect.mna.burning_rage": "Burning Rage",
-	"effect.mna.chill": "Chill",
-	"effect.mna.heatwave": "Heatwave",
-	"effect.mna.sense_life": "Sense Life",
-	"effect.mna.shackles_of_pain": "Shackles of Pain",
-	"effect.mna.curse_of_agony": "Curse of Agony",
-	"effect.mna.soul_trap": "Soul Trap",
+	"effect.mna.aura_of_frost": "Aura do Frio",
+	"effect.mna.camouflage": "Camuflagem",
+	"effect.mna.bulwark": "Bastião",
+	"effect.mna.icarian_flight": "Vôo Icariano",
+	"effect.mna.repair": "Reparo",
+	"effect.mna.eldrin_sight": "Visão Eldrin",
+	"effect.mna.wellspring_sight": "Visão Manafonte",
+	"effect.mna.entangle": "Enraizado",
+	"effect.mna.gravity_well": "Poço Gravitacional",
+	"effect.mna.chrono_anchor": "Chrono Âncora",
+	"effect.mna.chrono_exhaustion": "Chrono Exaustão",
+	"effect.mna.watery_grave": "Túmulo Aquático",
+	"effect.mna.silence": "Silenciar",
+	"effect.mna.mana_boost": "Boost de Mana",
+	"effect.mna.mana_regen": "Regen de Mana",
+	"effect.mna.dispel_exhaustion": "Dissipar Exaustão",
+	"effect.mna.instant_mana": "Restauração de Mana",
+	"effect.mna.asphyxiate": "Asfixiar",
+	"effect.mna.mana_stunt": "Mana Atrofiada",
+	"effect.mna.mana_shield": "Escudo de Mana",
+	"effect.mna.flame_cloak": "Capa de Fogo",
+	"effect.mna.wind_wall": "Parede de Vento",
+	"effect.mna.levitation": "Levitação",
+	"effect.mna.briarthorn_barrier": "Barreira de Espinhos",
+	"effect.mna.life_tap": "Toque de Vida",
+	"effect.mna.lift": "Levantar",
+	"effect.mna.living_bomb": "Bomba Viva",
+	"effect.mna.mana_burn": "Queimadura de Mana",
+	"effect.mna.greater_invisibility": "Invisibilidade Superior",
+	"effect.mna.pilgrim": "Peregrinação",
+	"effect.mna.confusion": "Confusão",
+	"effect.mna.mind_control": "Controle de Mente",
+	"effect.mna.divination": "Divinação",
+	"effect.mna.mist_form": "Forma da Névoa",
+	"effect.mna.enlarged": "Aumentado",
+	"effect.mna.reduced": "Reduzido",
+	"effect.mna.mind_vision": "Visão de Mente",
+	"effect.mna.possession": "Possessão",		
+	"effect.mna.death": "Olhar do Ceifador",
+	"effect.mna.choosing_wellspring": "Escolhendo Manafonte",
+	"effect.mna.eldrin_flight": "Vôo Eldrin",
+	"effect.mna.circle_of_power": "Santuário Aliado",
+	"effect.mna.cold_dark": "Abraçar da Morte",
+	"effect.mna.soul_vulnerability": "Alma Vulnerável",
+	"effect.mna.fossilize": "Fossilizar",
+	"effect.mna.snowblind": "Cegueira das Neves",
+	"effect.mna.bind_wounds": "Atar Feridas",
+	"effect.mna.insight": "Perspicácia",
+	"effect.mna.earthquake": "Terremoto",
+	"effect.mna.amplify_magic": "Amplificar Magia",
+	"effect.mna.dampen_magic": "Amortecer Magia",
+	"effect.mna.soaked": "Molhado",
+	"effect.mna.sunder": "Quebrado",
+	"effect.mna.frailty": "Fragilidade",
+	"effect.mna.disjunction": "Disjunção",
+	"effect.mna.telekinesis": "Telecinese",
+	"effect.mna.water_walking": "Andar Sobre as Águas",
+	"effect.mna.spider_climbing": "Escalada Aranha",
+	"effect.mna.soar": "Voando",
+	"effect.mna.lacerate": "Lacerar",
+	"effect.mna.writhing_brambles": "Espinhos Contorcidos",
+	"effect.mna.burning_rage": "Fúria Flamejante",
+	"effect.mna.chill": "Calafrio",
+	"effect.mna.heatwave": "Onda de Calor",
+	"effect.mna.sense_life": "Detectar Vida",
+	"effect.mna.shackles_of_pain": "Algemas da Dor",
+	"effect.mna.curse_of_agony": "Maldição da Agonia",
+	"effect.mna.soul_trap": "Prender Alma", //PAREI AQUI
 		
 	"helptip.mna.ritual_empty_hand": "Did you know?  You can right click these runes with an empty hand and it will try to pull the item it's looking for from your inventory automatically!",
 	"helptip.mna.pin_recipe": "Having to keep looking up a recipe?  You can pin it to your HUD using the pin button at the top left of the recipe!",
